# quadus

./: .clang-format  .clangd  .editorconfig  .gitignore  COPYING  COPYING.h  config.h.in  meson.build  meson_options.txt
.github/workflows/: build.yml
include/: calls.h  game.h  mino.h  mode.h  piece.h  playfield.h  qdsbuild.h  quadus.h  rs.h  ruleset.h  ui.h
include/piecegen/: bag.h  his.h  quadus.h  tgm.h
include/quadus/: calls.h  mode.h  piece.h  ruleset.h  ui.h
include/quadus/piecegen/: bag.h  his.h  quadus.h  tgm.h
include/quadus/ruleset/: input.h  linequeue.h  rand.h  twist.h  utils.h
include/ruleset/: input.h  linequeue.h  piecegen.h  rand.h  twist.h
lib/: meson.build
lib/game/: actions.c  init.c  meson.build  properties.c
lib/include/: game.h
lib/include/modes/: marathon.h
lib/include/ruleset/: standard.h
lib/include/rulesets/: arcade.h  standard.h
lib/modes/: invisible.c  marathon.c  master.c  meson.build  sprint.c
lib/modes/master/: credits.c  data.c  grade.c  main.c  master.c  master.h  meson.build
lib/piecegen/: bag.c  his.c  meson.build  quadus.c  tgm.c
lib/rulesets/: meson.build
lib/rulesets/arcade/: arcade.c  arcade.h  meson.build  pieces.c
lib/rulesets/common/: input.c  linequeue.c  meson.build  piece.c  rand.c  twist.c  utils.c
lib/rulesets/standard/: standard.c
lib/rulesets/tgm/: functions.h  meson.build
quadus/include/: game.h
quadus/modes/: marathon.c
quadus/piecegen/: bag.c
quadus/rulesets/common/: input.c  linequeue.c  rand.c
src/: meson.build
src/game/: actions.c  init.c  meson.build  properties.c
src/include/: game.h
src/include/ruleset/: standard.h
src/playfield/: actions.c  init.c  properties.c
src/rulesets/: meson.build
src/rulesets/common/: input.c  meson.build  piece.c  rand.c  twist.c
src/rulesets/standard/: meson.build  standard.c
src/utils/: meson.build  twist.c
tests/: meson.build
tests/game/: addlines.c  clear.c  cycle.c  drop.c  hold.c  init.c  lock.c  meson.build  move.c  overlap.c  properties.c  rotate.c  spawn.c  suite.c
tests/piecegen/: bag.c  meson.build  tgm.c
tests/playfield/: clear.c  drop.c  hold.c  init.c  lock.c  meson.build  move.c  overlap.c  properties.c  rotate.c  spawn.c
tests/ruleset/: input.c  linequeue.c  meson.build
tests/rulesets/: meson.build  standard.c
tests/utils/: main.c  meson.build  mockgen.c  mockgen.h  mockruleset.c  mockruleset.h
ui/: game.c  input.c  interface.c  main.c  meson.build  quadustui.h  screen.h  udev.c  ui.c  ui.h  uidata.c  widget.h  widgets.h
ui/input/: curses.c  evdev.c  evdev.h  input.h  linux.c
ui/screens/: game.c  menu.c  modeselect.c
ui/widgets/: menu.c
